# ruptura

./: .gitignore  404.html  ARCHITECTURE.md  CLAUDE.md  CNAME  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.v2  GOVERNANCE.md  LICENSE  M.json  MAINTAINERS.md  README-v2.0.md  README.md  SECURITY.md  collector-backup.yaml  create-v2.0-branch.sh  dashboard-backup.yaml  docker-compose.yml  index.html  manifests.yaml  requirements.txt  sitemap.xml
.devcontainer/: devcontainer.json  on-create.sh  post-create.sh
.github/: CODEOWNERS
.github/workflows/: build-and-push-v3.0.yaml  check-signals.yml  ci.yml  cleanup-redeploy.yml  docs.yml  (+21 more)
about/: index.html
api/: index.html
architecture/: index.html
community/: index.html
concepts/: index.html
dashboard/: app.py
deploy/: demo-workloads.yaml  docker-compose-ui-nginx.conf  generated_1774004910.yaml  generated_1774004929.yaml  generated_1774004952.yaml  scraper.yaml
docs/: DESIGN_SYSTEM.md  REFERENCE.md  REVIEW.md  cncf-sandbox-proposal.md  judgment.md  paid_plan.md  reference.md
getting-started/: index.html
helm/: Chart.yaml  values.yaml
install/: ruptura.yaml
lab-setup/: 00-namespaces.yaml  01-prometheus.yaml  02-otel-collector.yaml  03-ruptura-community.yaml  05-test-apps.yaml  setup.sh
manifests/: mlops-v2.0.yaml  mlops-v3.0.yaml
missions/: ALPHA.md  BETA.md  GAMMA.md
operations/: index.html
raw/: error_2.txt  task_1.txt  task_2.txt  task_3.txt
requirements/: collector.txt  dashboard.txt  trainer.txt
scripts/: check-docs-env.sh  deploy-kamatera.sh  deploy-v2.0.sh  deploy-v3.0.sh  install.sh  lab-verify.sh  render-install-manifest.sh  simulate.py
sdk/python/: pyproject.toml
sdk/python/kairo/: __init__.py  client.py  exceptions.py
sdk/python/ohe/: __init__.py  client.py  exceptions.py
sdk/python/ruptura/: __init__.py  client.py  exceptions.py
sdk/python/tests/: test_client.py
sdks/: index.html
search/: search_index.json
site/: mkdocs.yml  requirements.txt
src/: generated_1774003763.py  generated_1774004137.py  generated_1774004781.py  generated_1774004799.py  generated_1774004834.py  generated_1774004851.py  generated_1774004945.py  generated_1774006138.py  generated_1774006162.py  generated_1774006191.py
testapp/: Dockerfile  go.mod  main.go
tests/: conftest.py
ui/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf.template  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
workdir/: .dockerignore  .gitignore  .golangci.yml  Dockerfile  README.md  coverage.html  coverage.out  docker-compose.demo.yml  go.mod  go.sum
workdir/sdk/python/: pyproject.toml
workdir/sdk/python/ohe/: __init__.py  client.py
workdir/sdk/python/tests/: test_client.py
(+598 files in other folders)
