[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ohe-sdk"
version = "0.4.4"
description = "Python SDK for the OHE Observability Platform"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/benfradjselim/ohe"
Documentation = "https://github.com/benfradjselim/ohe/tree/main/sdk/python"

[tool.setuptools.packages.find]
where = ["."]
include = ["ohe*"]
